// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar 스냅샷 - 기본값 1`] = `
<View
  className="w-full"
  onLayout={[Function]}
>
  <Text
    className="text-label text-black"
  >
    밝기
  </Text>
  <View
    className="relative flex justify-center"
    style={
      {
        "height": 48,
      }
    }
  >
    <View
      className="absolute left-0 top-0 h-full w-full"
    />
    <View
      className="absolute left-0 top-0 h-[48px] w-full"
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
    >
      <View
        className="bg- absolute left-0 w-full bg-[#F1F5F9]"
        style={
          {
            "borderRadius": 3,
            "height": 6,
            "top": 21,
          }
        }
      />
      <View
        className="absolute left-0 rounded bg-sub2-500"
        style={
          {
            "height": 6,
            "top": 21,
            "width": 12,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ProgressBar 스냅샷 - 커스텀 min/max/value 1`] = `
<View
  className="w-full"
  onLayout={[Function]}
>
  <Text
    className="text-label text-black"
  >
    밝기
  </Text>
  <View
    className="relative flex justify-center"
    style={
      {
        "height": 48,
      }
    }
  >
    <View
      className="absolute left-0 top-0 h-full w-full"
    />
    <View
      className="absolute left-0 top-0 h-[48px] w-full"
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
    >
      <View
        className="bg- absolute left-0 w-full bg-[#F1F5F9]"
        style={
          {
            "borderRadius": 3,
            "height": 6,
            "top": 21,
          }
        }
      />
      <View
        className="absolute left-0 rounded bg-sub2-500"
        style={
          {
            "height": 6,
            "top": 21,
            "width": 0,
          }
        }
      />
    </View>
  </View>
</View>
`;
